--- a/shop-front/src/theme/variables.css
+++ b/shop-front/src/theme/variables.css
@@ -246,6 +246,7 @@ http://ionicframework.com/docs/theming/ */
 
   &::-webkit-scrollbar {
     width: 9px;
+    height: 9px;
     background-color: #f4f5f8;
   }
 
@@ -259,6 +260,7 @@ http://ionicframework.com/docs/theming/ */
   .scrollbar-active {
     &::-webkit-scrollbar {
       width: 5px;
+      height: 5px;
     }
   }
 }
@@ -277,4 +279,48 @@ http://ionicframework.com/docs/theming/ */
 
 .standart-button {
   margin: 15px 0 0 0;
+}
+
+.input-item {
+  border: 1px solid lightgrey;
+  margin: 0;
+  border-radius: 3px;
+}
+
+.input-item::part(native) {
+  padding-left: 10px;
+}
+
+.basic-input {
+  margin: 0;
+  border-radius: 3px;
+  font-size: 15px;
+
+  .native-wrapper {
+    --border-width: 0;
+  }
+}
+
+.input-icon {
+  margin-right: 10px;
+}
+
+.form-error {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-height: 13px;
+  font-size: 13px;
+  color: var(--ion-color-danger);
+  gap: 2px;
+}
+
+.required-field {
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  width: 4px;
+  height: 4px;
+  background-color: rgb(255, 45, 45);
+  border-radius: 50%;
 }
